--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -1,21 +1,21 @@
 set(SRCS
-    main.cpp
-    TriangleWindow.cpp
-    TriangleWindow.h
+        main.cpp
+        Window.cpp
+        Window.h
 
-    Shaders/diffuse.fs
-    Shaders/diffuse.vs
-    Textures/voronoi.png
+        Shaders/diffuse.fs
+        Shaders/diffuse.vs
+        Textures/voronoi.png
 
-    resources.qrc
-)
+        resources.qrc
+        )
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
 add_executable(demo-app ${SRCS})
 
 target_link_libraries(demo-app
-    PRIVATE
+        PRIVATE
         Qt5::Widgets
         FGL::Base
-)
+        )
