Disable warning for qt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ if (MSVC)
     add_compile_options(/W4 /WX)
     # disable warning for qt.
     add_compile_options(/wd5240)
+    add_compile_options(/wd5054)
 else()
     # lots of warnings and all warnings as errors
     add_compile_options(-Wall -Wextra -pedantic -Werror)
