--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -1,13 +1,10 @@
 set(SRCS
-    main.cpp
-    Window.cpp
-    Window.h
+        main.cpp
+        Window.cpp
+        Window.h
 
-    Shaders/diffuse.fs
-    Shaders/diffuse.vs
-    Textures/voronoi.png
-
-    resources.qrc
+        resources.qrc
+        Camera.h
 )
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
@@ -19,4 +16,5 @@ target_link_libraries(demo-app
         Qt5::Widgets
         FGL::Base
         thirdparty::tinygltf
+        thirdparty::glm
 )
